Using extra property for dbis archiva url